[package]
name = "simple_drive_api"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"

[dependencies]
google_api3 = { version = "0.1.0", path = "../google_api3" }
hyper = "^ 0.10"
hyper-native-tls = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.0"
yup-oauth2 = "^ 1.0"
